--- a/style.css
+++ b/style.css
@@ -22,8 +22,7 @@ header {
 
 @media (max-width: 768px) {
     header {
-         margin-bottom: 20px;
-         height: 200px;
+         height: 200px;   
     }
 }
 
@@ -36,8 +35,7 @@ img {
 .image img {
     object-fit: cover;
     height: 320px;
-    width: 100%;
-    
+    width: 100%;   
 }  
 
 .menu {
@@ -410,6 +408,7 @@ button {
     width: 80px;
     height: 30px;
     border: none;
+    cursor: pointer;
 }
 
 .btn-fixed {
@@ -421,7 +420,38 @@ button {
     right: 10px;
     bottom: 10px;
     box-shadow: 3px 3px 10px #333;
+    cursor: pointer;
+    
 }
+
+.btn-fixed::before{
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: #FFA500;
+    transition: all .5s;
+    z-index: -1;
+  }
+
+  .efeito::before {
+    width: 0;
+    height: 100%;
+    top: 0%;
+    left: 0%;
+  }
+  
+  .efeito:hover::before{
+    width: 100%;
+    background: rgba(199,76,52,1);
+    background: -moz-linear-gradient(left, rgba(199,76,52,1) 0%, rgba(255,165,0,1) 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(199,76,52,1)), color-stop(100%, rgba(255,165,0,1)));
+    background: -webkit-linear-gradient(left, rgba(199,76,52,1) 0%, rgba(255,165,0,1) 100%);
+    background: -o-linear-gradient(left, rgba(199,76,52,1) 0%, rgba(255,165,0,1) 100%);
+    background: -ms-linear-gradient(left, rgba(199,76,52,1) 0%, rgba(255,165,0,1) 100%);
+    background: linear-gradient(to right, rgba(199,76,52,1) 0%, rgba(255,165,0,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c74c34', endColorstr='#ffa500', GradientType=1 );
+  }
 
 footer {
     display: flex;
